# DH2023

./: .env.dist  README.md  TODO.md  do_the_viz.sh  explore-db.py  generate_the_data.sh  get_threat_lists.sh  pyproject.toml  requirements.txt  start_here.sh
common_data/: services  tld.csv
common_data/port_counts/: adho-ports.csv  dhq-ports.csv
common_data/threat_lists/: bindef.txt  blocklist.txt  ci_bad.txt  dshield.txt  emerging.txt  et_ips.txt  myip.txt  spamedrop.txt
scripts/: augment_data.py  check_threat_lists.py  db_ops.py  extract_2019_adho_urls.py  extract_2022_adho_urls.py  extract_urls.py  find_ac_cves.py  gen_port_stats.py  get_domain_locs.py  get_shodan.py  get_vulns_from_shodan_data.py  import_urls.py  init_db.py  priv_db_ops.py  tld-stats.py  util.py
viz/: dc_graph_top_15_cve_by_domain.py  geo_map_cves.py  geo_map_domains.py  geo_map_top5000_cves.py  graph_age_of_cves.py  plot_all_ac_hosts.py  plot_all_asn.py  plot_all_cve.py  plot_all_domains.py  plot_all_ports.py  plot_all_tld.py  plot_all_uni_ports.py  plot_top50_asn.py  plot_top50_cve.py  plot_top50_domains.py  plot_top50_ports.py  plot_top50_tld.py  util.py
viz/output/: DHQ-academic_hosts.html  DHQ-age_of_cves.html  DHQ-all_ports.html  DHQ-all_tld.html  DHQ-all_uni_ports.html  DHQ-top15_cve_having_ac_domains.html  adho-academic_hosts.html  adho-age_of_cves.html  adho-age_of_top_ten_cves.html  adho-all_asn.html  adho-cve_counts_by_year.html  adho-locations_of_linked_hosts.html  adho-top50_asn.html  adho-top50_cve.html  adho-top50_domains.html  adho-top50_tld.html
(+735 files in other folders)
